Avoid raw Optional#get